This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.7.5
  Cleaning up Help-menu (#1875111)
  Right-align tab size number in editor options (r5037)
  BugFix: Potential lockup in folder compare (#1865131, #1889907)
  BugFix: Line filter didn't filter non-ascii lines correctly (#1880628)
  BugFix: GNU General Public License name in menu (#1868989)
  Translation updates:
  - Croatian (r5032)
  - Czech (r5017)
  - German (r5038)
  - Swedish (#1891326)

WinMerge 2.7.7.4 - 2008-02-07 (r5011)
  Detect (and read/write) UTF-8 files without BOM (#1879271)
  Tell user that file is not a conflict file (#1880423)
  Allow opening conflict file from command line (#1880857)
  Use radio symbol for current EOL menu item (#1869755)
  Ask and create pair for unique folder and open them (#1881454)
  Add publisher info to version resource (#1884920)
  Move "Zoom In/Out" to own sub menu (#1879340)
  Installer: Add more version resource info (#1885793)
  Reset text zoom to default size with Ctrl + * (#1886664)
  BugFix: Always return 0 to command line (#1854419)
  BugFix: Merge/Delete deleted items from read-only sides (#1882019)
  BugFix: Shellextension had no publisher info and wrong
    description (#1878828)
  BugFix: Lockup when showing binary files (#1880711)
  Translation updates:
  - Croatian (r4952)
  - Japanese (r4962)
  - Swedish (#1884918)

WinMerge 2.7.7.3 - 2008-01-23 (r4951)
  Resolve conflict files (cvs, svn...) (#1875129)
  Save line filter when edit box loses focus (#1875853)
  Add link to translations website at help menu (#1699883)
  Manual: Add instructions for conflict file resolving (#1876770)
  Manual: Document third path given to command line (#1877735)
  BugFix: Fix Quick Compare regression in 2.7.7.2 (#1872165)
  Bugfix: Clipped text in file saving error message (#1874854)

WinMerge 2.7.7.2 - 2008-01-14 (r4915)